# MantiCore

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: build.rs  main.rs  mocks.rs
src/ui/: card.slint  carousel.slint  clock.slint  main.slint  selector.slint  settings.slint  theme.slint
