[package]
name = "manticore"
version = "0.1.0"
authors = ["Zaki"]
edition = "2021"
license = "MIT OR Apache-2.0"
build = "src/build.rs"

[dependencies]
hal = { package = "esp32-hal", version = "0.17.0", features = ["embassy", "embassy-time", "embassy-time-timg0", "async", "embassy-executor-thread"]}
esp-hal-procmacros = "0.8.0"
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32"] }
gc9a01a = "0.1.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0-rc.2"
tinybmp = "0.5.0"
esp-alloc = "0.3.0"
static_cell = "2.0.0"
embassy-executor = {version = "0.4.0", features = ["nightly", "executor-thread", "integrated-timers"]}
embassy-time = "0.2.0"
embassy-futures = "0.1.1"
cst816s = "0.1.4"

[dependencies.slint]
version = "1.2.0"
default-features = false
features = ["compat-1-0", "unsafe-single-threaded", "libm"]

[build-dependencies]
slint-build = "1.2.0"

[features]
default = ["embassy-time-timg0"]
embassy-time-timg0 = []
