[package]
name = "manticore"
version = "0.1.0"
authors = ["Zaki"]
edition = "2021"
license = "MIT OR Apache-2.0"
build = "src/build.rs"

[dependencies]
hal = { package = "esp-hal", git = "https://github.com/Song-aff/esp-hal-c3", branch = "main", features = ["embassy-time-timg0", "embassy-executor-thread", "esp32c3", "embedded-hal"]}
esp-backtrace = { version = "0.11.1", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.1", features = ["esp32c3"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
esp-alloc = "0.3.0"
static_cell = { version = "2.0.0", features = ["nightly"]}
embassy-executor = {version = "0.5.0", features = ["nightly", "executor-thread", "integrated-timers", "arch-riscv32"]}
embassy-time = "0.3.0"
embassy-sync = "0.5.0"
embassy-futures = "0.1.1"
cst816s = "0.1.4"
gc9a01a = "0.1.1"
portable-atomic = { version = "1", features = ["critical-section"] }

[dependencies.slint]
version = "1.5.1"
default-features = false
features = ["compat-1-0", "unsafe-single-threaded", "libm"]

[build-dependencies]
slint-build = "1.5.1"

[features]
default = ["embassy-time-timg0"]
embassy-time-timg0 = []

[profile.release]
opt-level = 3