[package]
name = "manticore"
version = "0.1.0"
authors = ["Zaki"]
edition = "2021"
license = "MIT OR Apache-2.0"
build = "src/build.rs"

[dependencies]
esp-hal = { version = "0.20.1", features = ["async", "esp32", "embedded-hal"] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32"] }
esp-hal-procmacros = { version = "0.13.0", features = ["embassy"] }
esp-backtrace = { version = "0.14.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.11.0", features = ["esp32"] }
esp-alloc = { version = "0.4.0" }
gc9a01a_driver = "0.3.2"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-hal-async = "1.0.0"
tinybmp = "0.6.0"
static_cell = "2.0.0"
embassy-executor = { version = "0.6.0", features = ["nightly", "executor-thread", "integrated-timers"] }
embassy-time = "0.3.2"
embassy-futures = "0.1.1"
embassy-embedded-hal = "0.2.0"
cst816s = "0.1.4"

[dependencies.slint]
version = "1.7.0"
default-features = false
features = ["compat-1-0", "unsafe-single-threaded", "libm"]

[build-dependencies]
slint-build = "1.7.0"

[patch.crates-io]
gc9a01a_driver = { git = "https://github.com/ManticoreOrg/gc9a01a_driver" }
cst816s = { git = "https://github.com/ManticoreOrg/cst816s" }

[features]
default = ["embassy-time-timg0"]
embassy-time-timg0 = []
